# claude-switch

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
assets/: statusline-profile.sh
src/: lib.rs  main.rs
src/cli/: parser.rs  prompt.rs
src/commands/: mcp_sync.rs  mod.rs  switch.rs  usage.rs
src/proxy/: runner.rs
src/security/: mac_keychain.rs  mod.rs  token.rs  win_cred.rs
src/utils/: fs.rs  logger.rs
