[package]
name = "claude-switch"
version = "0.9.0"
edition = "2024"

[features]
default = ["usage"]
usage = ["dep:reqwest", "dep:tokio", "dep:serde_json", "dep:chrono"]

[dependencies]
console   = "0.15"
dialoguer = "0.11"
dirs      = "6.0.0"
sha2      = "0.10"

tokio      = { version = "1", features = ["full"], optional = true }
serde_json = { version = "1", optional = true }
chrono     = { version = "0.4", features = ["serde"], optional = true }
reqwest    = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }
